[refs #84441] Title bottom border. Fix content-core align.

--- a/src/eni/seis/theme/theme-south/css/main.css
+++ b/src/eni/seis/theme/theme-south/css/main.css
@@ -2546,6 +2546,9 @@ body {
 #content table {
   width: 100%;
 }
+#content-core {
+  text-align: initial;
+}
 #content-core span {
   color: rgba(49, 69, 110, 0.75);
 }
