--- a/src/eni/seis/theme/theme-south/src/less/layout/global.less
+++ b/src/eni/seis/theme/theme-south/src/less/layout/global.less
@@ -271,6 +271,7 @@ body {
     dd {
         margin: 0;
     }
+    text-align: initial;
 }
 
 aside.page-aside div,
